--- a/thank-you.html
+++ b/thank-you.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='/thank-you/thank-you.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./thank-you/thank-you.css'>
     <meta name="description" content="Thank you page.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap">
     <title>Obrigado</title>
